Fixed overflow graph

--- a/pages/rawbase/css/style.css
+++ b/pages/rawbase/css/style.css
@@ -23,7 +23,8 @@ padding-right: 20px;
 #graph {
 	/*position: absolute;*/
 	width: 100%;
-	height: 100%
+	height: 100%;
+	overflow: auto;
 }
 
 #
